<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".SearchActivity">

    <Button
        android:id="@+id/btFind"
        android:layout_width="188dp"
        android:layout_height="56dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/btFind"
        android:textColor="#050404"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <RadioGroup
        android:id="@+id/rgTimes"
        android:layout_width="244dp"
        android:layout_height="165dp"
        android:background="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157">

        <RadioButton
            android:id="@+id/rbShort"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:checked="true"
            android:clickable="true"
            android:text="@string/rbShort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:checked="true"
            android:clickable="true"
            android:text="@string/rbMedium" />

        <RadioButton
            android:id="@+id/rbLong"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:checked="true"
            android:clickable="true"
            android:text="@string/rbLong" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="36dp"
        android:text="@string/tvSearch"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <Spinner
        android:id="@+id/ingredients"
        android:layout_width="306dp"
        android:layout_height="59dp"
        android:background="#CB80AA01"
        android:entries="@array/ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>